# libaws

./: AUTHORS.txt  CMakeCPack.cmake  CMakeCompiler.txt  CMakeConfiguration.txt  CMakeLists.txt  CMakeUninstall.cmake.in  CMakeWindows.cmake  CPackSourceConfig.cmake.in  ChangeLog  LIBAWSConfig.cmake.in  LIBAWSUse.cmake  NOTICE.txt  README.txt
cmake_modules/: FindFuse.cmake  FindMemcached.cmake
doc/: CMakeLists.txt  S3FS_caching_keys.txt  doxy.config.in  indexpage.dox
fuse/: CMakeLists.txt  awscache.cpp  awscache.h  config.h.in  properties.cpp  properties.h  s3fs.cpp  s3fuse.cpp
include/: CMakeLists.txt
include/libaws/: CMakeLists.txt  aws.h  awsconnectionfactory.h  awstime.h  awsversion.h  common.h  config.h.in  connectionpool.h  exception.h  mutex.h  s3connection.h  s3exception.h  s3response.h  sdbconnection.h  sdbexception.h  sdbresponse.h  smart_ptr.h  sqsconnection.h  sqsexception.h  sqsresponse.h
pkg/rpm/: libaws.spec
src/: CMakeLists.txt  awsconnection.cpp  awsconnection.h  awsquerycallback.cpp  awsquerycallback.h  awsqueryconnection.cpp  awsqueryconnection.h  awsqueryresponse.h  awstime.cpp  awsversion.cpp.in  callingformat.cpp  callingformat.h  canonizer.cpp  canonizer.h  common.h  curlstreambuf.cpp  curlstreambuf.h  exception.cpp  requestheadermap.cpp  requestheadermap.h  response.cpp  response.h  util.h
src/api/: CMakeLists.txt  awsconnectionfactory.cpp  awsconnectionfactoryimpl.cpp  awsconnectionfactoryimpl.h  connectionpool.cpp  mutex.cpp  s3connectionimpl.cpp  s3connectionimpl.h  s3response.cpp  sdbconnectionimpl.cpp  sdbconnectionimpl.h  sdbresponse.cpp  sqsconnectionimpl.cpp  sqsconnectionimpl.h  sqsresponse.cpp
src/logging/: CMakeLists.txt  logger.cc  logger.hh  loggerconfig.cc  loggerconfig.hh  loggermanager.cc  loggermanager.hh  logging.hh
src/s3/: CMakeLists.txt  s3callbackwrapper.h  s3connection.cpp  s3connection.h  s3exception.cpp  s3handler.cpp  s3handler.h  s3object.cpp  s3object.h  s3response.cpp  s3response.h
src/sdb/: CMakeLists.txt  sdbconnection.cpp  sdbconnection.h  sdbexception.cpp  sdbhandler.cpp  sdbhandler.h  sdbresponse.cpp  sdbresponse.h
src/sqs/: CMakeLists.txt  sqsconnection.cpp  sqsconnection.h  sqsexception.cpp  sqshandler.cpp  sqshandler.h  sqsresponse.cpp  sqsresponse.h
src/win32/: CMakeLists.txt  XGetopt.cpp  XGetopt.h  win32_atoll.cpp  win32_atoll.h  win32_strptime.cpp  win32_strptime.h
tests/: CMakeLists.txt  s3buckettest.cpp  s3objecttest.cpp  sdbtest.cpp  sqstest.cpp
