INCLUDE (CheckIncludeFiles)
INCLUDE (CheckFunctionExists)

CHECK_INCLUDE_FILES(inttypes.h    HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES(stdint.h      HAVE_STDINT_H)
CHECK_INCLUDE_FILES(stdlib.h      HAVE_STDLIB_H)
CHECK_INCLUDE_FILES(limits.h      HAVE_LIMITS_H)
CHECK_INCLUDE_FILES(sys/types.h   HAVE_SYS_TYPES_H)

CHECK_FUNCTION_EXISTS(strtoimax   HAVE_STRTOIMAX_F)
CHECK_FUNCTION_EXISTS(strptime    HAVE_STRPTIME_F)

MESSAGE(STATUS "configured ${CMAKE_CURRENT_SOURCE_DIR}/config.h.in --> ${CMAKE_CURRENT_BINARY_DIR}/config.h")
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)

# install all the headers
FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(FILES ${files} DESTINATION include/libaws)

INSTALL(FILES DESTINATION include)
